[gd_scene load_steps=3 format=3 uid="uid://b8x70a02a1c5"]

[ext_resource type="Script" path="res://scripts/password_reset_dialog.gd" id="1_0x1y2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.2, 0.35, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PasswordResetDialog" type="AcceptDialog"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 0
title = "üîë Reset Password"
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_0x1y2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter the verification code sent to your email and your new password:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="EmailLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Email: user@example.com"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.8, 1, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CodeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üî¢ Verification Code:"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="CodeField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter verification code"
max_length = 12
theme_override_font_sizes/font_size = 14

[node name="NewPasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üîê New Password:"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="NewPasswordField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter new password"
secret = true
theme_override_font_sizes/font_size = 14

[node name="ConfirmPasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üîê Confirm Password:"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="ConfirmPasswordField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Confirm new password"
secret = true
theme_override_font_sizes/font_size = 14
